Fixed wide gaps & width issues in gallery pages as well as possible.
Issues addressed:

https://github.com/gunchleoc/ginbeag/issues/31
https://github.com/gunchleoc/ginbeag/issues/33

--- a/templates/rm/main.css
+++ b/templates/rm/main.css
@@ -495,7 +495,6 @@ div.newsquote {
 	text-decoration:none;
 	padding:1em;
 	margin:1em;
-    height: 350px;
     overflow:hidden;
     display:table-cell;
 	font-size:90%;    
